--- a/app/src/main/res/values-sw600dp/template-styles.xml
+++ b/app/src/main/res/values-sw600dp/template-styles.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   Copyright 2013 The Android Open Source Project
 
@@ -15,9 +14,12 @@
   limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_websearch"
-        android:icon="@drawable/action_search"
-        android:title="@string/action_websearch"
-        android:showAsAction="ifRoom|withText" />
-</menu>
+<resources>
+
+    <style name="Widget.SampleMessage">
+        <item name="android:textAppearance">?android:textAppearanceLarge</item>
+        <item name="android:lineSpacingMultiplier">1.2</item>
+        <item name="android:shadowDy">-6.5</item>
+    </style>
+
+</resources>
